--- a/index.html
+++ b/index.html
@@ -372,7 +372,9 @@ sull’importo del piano di cura confermato
         <div class="footer">
             <p><strong>📍 Studio Sabiu SRL</strong></p>
             <p>San Giovanni Suergiu, Sardegna</p>
-            <p>📞 [Il tuo numero] | 📧 info@studiosabiu.it</p>
+           <p>📞 0781 689047 | 💬 WhatsApp 328 5770918</p>
+<p>📧 segreteria@studiosabiu.com</p>
+
             <p>🌐 www.studiosabiu.it</p>
         </div>
     </div>
