--- a/index.html
+++ b/index.html
@@ -252,35 +252,42 @@ body{
 document.getElementById("confirmForm").addEventListener("submit", async function(e){
   e.preventDefault();
 
-  if(!privacy.checked){
-    alert("Accetta la privacy");
+  // controllo privacy
+  if (!document.getElementById("privacy").checked) {
+    alert("Devi accettare l'informativa privacy");
     return;
   }
 
   const data = {
-    nome: nome.value,
-    cognome: cognome.value,
-    email: email.value,
-    telefono: telefono.value,
-    preferenza_orario: preferenza_orario.value,
-    sbiancamento_per: sbiancamento_per.value,
-    note: note.value
+    nome: document.getElementById("nome").value,
+    cognome: document.getElementById("cognome").value,
+    email: document.getElementById("email").value,
+    telefono: document.getElementById("telefono").value,
+    preferenza_orario: document.getElementById("preferenza_orario").value,
+    sbiancamento_per: document.getElementById("sbiancamento_per").value,
+    note: document.getElementById("note").value
   };
 
-  await fetch(
-    "https://script.google.com/macros/s/AKfycbxIKoeu8EFUa3gLAtmGfw4uCMQGOSgaC4iYkH9O_OkOyIW9pK2N0NButLm55S3SKQYA/exec",
-    {
-      method:"POST",
-      headers:{ "Content-Type":"application/json" },
-      body:JSON.stringify(data)
-    }
-  );
+  try {
+    const response = await fetch(
+      "https://script.google.com/macros/s/AKfycbxIKoeu8EFUa3gLAtmGfw4uCMQGOSgaC4iYkH9O_OkOyIW9pK2N0NButLm55S3SKQYA/exec",
+      {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(data)
+      }
+    );
 
-  document.querySelector(".content").style.display="none";
-  document.querySelector(".gift-box").style.display="none";
-  document.getElementById("successMessage").classList.add("show");
+    // MOSTRA SEMPRE CONFERMA (UX)
+    document.getElementById("confirmForm").style.display = "none";
+    document.querySelector(".gift-box").style.display = "none";
+    document.getElementById("successMessage").classList.add("show");
+
+    window.scrollTo({ top: 0, behavior: "smooth" });
+
+  } catch (error) {
+    console.error("Errore invio:", error);
+    alert("Errore nell'invio. Contattaci al 0781 689047");
+  }
 });
 </script>
-
-</body>
-</html>
