--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ body{
 
   <div class="footer">
     <p>📞 0781 689047 | 💬 WhatsApp 328 5770918</p>
-    <p>📧 info@studiosabiu.it</p>
+    <p>📧 segreteria@studiosabiu.com</p>
     <p>Studio Sabiu SRL – San Giovanni Suergiu</p>
   </div>
 
