--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <title>Conferma il tuo trattamento - Studio Sabiu</title>
 
 <style>
-* { margin:0; padding:0; box-sizing:border-box; }
+*{margin:0;padding:0;box-sizing:border-box}
 
 body{
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;
   background:linear-gradient(135deg,#E6F2FF 0%,#CCE5FF 100%);
   min-height:100vh;
   padding:20px;
@@ -31,8 +31,8 @@ body{
   color:#fff;
 }
 
-.header h1{font-size:32px;margin-bottom:10px;}
-.header p{opacity:.9;}
+.header h1{font-size:32px;margin-bottom:10px}
+.header p{opacity:.9}
 
 .gift-box{
   background:linear-gradient(135deg,#FFF9E6 0%,#FFE6B2 100%);
@@ -43,10 +43,10 @@ body{
   text-align:center;
 }
 
-.gift-box .icon{font-size:48px;margin-bottom:15px;}
-.gift-box h2{color:#FF6B00;margin-bottom:15px;}
+.gift-box .icon{font-size:48px;margin-bottom:15px}
+.gift-box h2{color:#FF6B00;margin-bottom:15px}
 
-.content{padding:30px;}
+.content{padding:30px}
 
 .urgency{
   background:#FFEBEE;
@@ -56,9 +56,9 @@ body{
   border-radius:4px;
 }
 
-.urgency p{color:#D32F2F;font-weight:600;}
+.urgency p{color:#D32F2F;font-weight:600}
 
-.form-group{margin-bottom:20px;}
+.form-group{margin-bottom:20px}
 
 .form-group label{
   display:block;
@@ -77,7 +77,7 @@ body{
   font-size:15px;
 }
 
-.form-group textarea{min-height:100px;resize:vertical;}
+.form-group textarea{min-height:100px;resize:vertical}
 
 .benefits{
   background:#F5F5F5;
@@ -86,10 +86,10 @@ body{
   margin:20px 0;
 }
 
-.benefits h3{color:#0066CC;margin-bottom:15px;}
-.benefits ul{list-style:none;}
-.benefits li{padding:8px 0;}
-.benefits li:before{content:"✓ ";color:#0066CC;font-weight:bold;}
+.benefits h3{color:#0066CC;margin-bottom:15px}
+.benefits ul{list-style:none}
+.benefits li{padding:8px 0}
+.benefits li:before{content:"✓ ";color:#0066CC;font-weight:bold}
 
 .checkbox-group{
   display:flex;
@@ -97,7 +97,7 @@ body{
   margin-bottom:20px;
 }
 
-.checkbox-group input{margin-right:10px;margin-top:3px;}
+.checkbox-group input{margin-right:10px;margin-top:3px}
 
 .submit-btn{
   width:100%;
@@ -126,7 +126,7 @@ body{
   text-align:center;
 }
 
-.success-message.show{display:block;}
+.success-message.show{display:block}
 
 .footer{
   background:#F8F8F8;
@@ -138,8 +138,8 @@ body{
 }
 
 @media(max-width:640px){
-  .header h1{font-size:24px;}
-  .content{padding:20px;}
+  .header h1{font-size:24px}
+  .content{padding:20px}
 }
 </style>
 </head>
@@ -232,7 +232,7 @@ body{
       <label>Accetto l’informativa privacy *</label>
     </div>
 
-    <button class="submit-btn">Sì, confermo il trattamento</button>
+    <button type="submit" class="submit-btn">Sì, confermo il trattamento</button>
   </form>
 
   <div id="successMessage" class="success-message">
@@ -242,7 +242,7 @@ body{
 
   <div class="footer">
     <p>📞 0781 689047 | 💬 WhatsApp 328 5770918</p>
-    <p>📧 segreteria@studiosabiu.com</p>
+    <p>📧 info@studiosabiu.it</p>
     <p>Studio Sabiu SRL – San Giovanni Suergiu</p>
   </div>
 
@@ -252,9 +252,8 @@ body{
 document.getElementById("confirmForm").addEventListener("submit", async function(e){
   e.preventDefault();
 
-  // controllo privacy
-  if (!document.getElementById("privacy").checked) {
-    alert("Devi accettare l'informativa privacy");
+  if(!document.getElementById("privacy").checked){
+    alert("Accetta l'informativa privacy");
     return;
   }
 
@@ -268,26 +267,26 @@ document.getElementById("confirmForm").addEventListener("submit", async function
     note: document.getElementById("note").value
   };
 
-  try {
+  try{
     const response = await fetch(
-      "https://script.google.com/macros/s/AKfycbxIKoeu8EFUa3gLAtmGfw4uCMQGOSgaC4iYkH9O_OkOyIW9pK2N0NButLm55S3SKQYA/exec",
+      "https://script.google.com/macros/s/AKfycby4gWPz9BiS58zk6ItgLRlaG8s4efsh0kmSzpzxBYY/dev",
       {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(data)
+        method:"POST",
+        headers:{ "Content-Type":"application/json" },
+        body:JSON.stringify(data)
       }
     );
 
-    // MOSTRA SEMPRE CONFERMA (UX)
-    document.getElementById("confirmForm").style.display = "none";
-    document.querySelector(".gift-box").style.display = "none";
+    document.getElementById("confirmForm").style.display="none";
+    document.querySelector(".gift-box").style.display="none";
     document.getElementById("successMessage").classList.add("show");
+    window.scrollTo({top:0,behavior:"smooth"});
 
-    window.scrollTo({ top: 0, behavior: "smooth" });
-
-  } catch (error) {
-    console.error("Errore invio:", error);
+  }catch(err){
     alert("Errore nell'invio. Contattaci al 0781 689047");
   }
 });
 </script>
+
+</body>
+</html>
